<resources>
    <string name="app_name">RedeSocial</string>
    <string name="iesb_mobile">IESB MOBILE</string>
    <string name="bem_vindo_quebra_linha">Bem-vindo, \nfaça seu cadastro.</string>
    <string name="bem_vindo">Bem-vindo, faça seu cadastro.</string>
    <string name="nome_completo">Nome completo</string>
    <string name="email">Email</string>
    <string name="nova_senha">Nova senha</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="entrar">ENTRAR</string>
    <string name="e_aluno">JÁ É ALUNO?</string>
    <string name="sing_in">ENTRE AGORA</string>
    <string name="aprender">Aprender</string>
    <string name="produzir">Produzir</string>
    <string name="teoria_pratica">A teoria e a prática juntas!</string>
    <string name="aprender_descricao">Não importa muito o que ta escrito aqui, o importante é o layout.</string>
    <string name="produzir_descricao">Continua não importando muito o texto de descrição da tela.</string>
    <string name="teoria_pratica_descricao">Só pra finalizar mesmo a tela de onBoarding.</string>
</resources>
